# idp-demo

./: catalog-info.yml  mkdocs.yml  openapi.yml  pyproject.toml
.github/workflows/: pylint.yml
service-docs/: catalog-info.yml
src/idp_demo/: main.py
src/idp_demo/docs/: index.md
